made a few tweeks

--- a/index.html
+++ b/index.html
@@ -516,9 +516,28 @@
           <h2 class="h2 article-title">Resume</h2>
         </header>
 
+        <!-- WORK & EXPERIENCE -->
         <section class="timeline">
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="briefcase-outline"></ion-icon>
+            </div>
+            <h3 class="h3">Work/Experience</h3>
+          </div>
+          <ol class="timeline-list">
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Undergraduate Internship</h4>
+              <span>10/2019 — 06/2022</span>
+              <p class="timeline-text">
+                Signal Processing Lab - Institute of Computer Science, FO.R.T.H.
+              </p>
+            </li>
 
-          <!-- EDUCATION -->
+          </ol>
+        </section>
+
+        <!-- EDUCATION -->
+        <section class="timeline">
           <div class="title-wrapper">
             <div class="icon-box">
               <ion-icon name="school-outline"></ion-icon>
@@ -560,26 +579,6 @@
           </ol>
         </section>
 
-        <!-- WORK & EXPERIENCE -->
-        <section class="timeline">
-          <div class="title-wrapper">
-            <div class="icon-box">
-              <ion-icon name="briefcase-outline"></ion-icon>
-            </div>
-            <h3 class="h3">Work/Experience</h3>
-          </div>
-          <ol class="timeline-list">
-            <li class="timeline-item">
-              <h4 class="h4 timeline-item-title">Undergraduate Internship</h4>
-              <span>10/2019 — 06/2022</span>
-              <p class="timeline-text">
-                Signal Processing Lab - Institute of Computer Science, FO.R.T.H.
-              </p>
-            </li>
-
-          </ol>
-        </section>
-
         <!-- HONORS & AWARDS -->
         <section class="timeline">
           <div class="title-wrapper">
@@ -607,6 +606,64 @@
           </ol>
         </section>
 
+        <!-- SKILLS -->
+        <section class="skill">
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="build-outline"></ion-icon>
+            </div>
+            <h3 class="h3">Technical skills</h3>
+          </div>
+          <ol class="timeline-list">
+            <!-- ADVANCED SKILLS -->
+            <li class="skills-text">
+              <span>
+                <div class="skills-icon">
+                  <ion-icon name="ellipse"></ion-icon>
+                </div>
+                Advanced:
+              </span>
+            </li><br>&emsp;
+            <li class="skills-text">C</li>&emsp;
+            <li class="skills-text">Python</li>&emsp;
+            <li class="skills-text">MATLAB</li>&emsp;
+            <li class="skills-text">Linux</li>&emsp;
+            <li class="skills-text">LaTeX</li>&emsp;
+            <li class="skills-text">Markdown</li>
+            <br>
+
+            <!-- INTERMEDIATE SKILLS -->
+            <li class="skills-text">
+              <span>
+                <div class="skills-icon">
+                  <ion-icon name="disc-outline"></ion-icon>
+                </div>
+                Intermediate:
+              </span>
+            </li><br>&emsp;
+            <li class="skills-text">Git/Github</li>&emsp;
+            <li class="skills-text">C++</li>&emsp;
+            <li class="skills-text">Java</li>&emsp;
+            <li class="skills-text">HTML</li>&emsp;
+            <br>
+
+            <!-- BASIC SKILLS -->
+            <li class="skills-text">
+              <span>
+                <div class="skills-icon">
+                  <ion-icon name="ellipse-outline"></ion-icon>
+                </div>
+                Basic:
+              </span>
+            </li><br>&emsp;
+            <li class="skills-text">Pytorch</li>&emsp;
+            <li class="skills-text">TensorFlow</li>&emsp;
+            <li class="skills-text">CSS</li>&emsp;
+            <li class="skills-text">Prolog</li>&emsp;
+            <li class="skills-text">ASP</li>&emsp;
+            <li class="skills-text">SQL</li>&emsp;
+          </ol>
+
         <!-- LANGUAGES -->
         <section class="timeline">
           <div class="title-wrapper">
@@ -616,9 +673,9 @@
             <h3 class="h3">Languages</h3>
           </div>
           <ol class="timeline-list">
-            <li class="timeline-text">Greek (native)</li>
-            <li class="timeline-text">English (fluent - C1)</li>
-            <li class="timeline-text">German (basic)</li>
+            <li class="skills-text">Greek (native)</li>&emsp;
+            <li class="skills-text">English (fluent - C1)</li>&emsp;
+            <li class="skills-text">German (basic)</li>
           </ol>
         </section>
 
@@ -631,21 +688,20 @@
             <h3 class="h3">Hobbies</h3>
           </div>
           <ol class="timeline-list">
-            <li class="timeline-text">Origami</li>
-            <li class="timeline-text">Papercrafts</li>
-            <li class="timeline-text">Board Games</li>
-            <li class="timeline-text">Cycling</li>
-            <li class="timeline-text">Cooking</li>
-            <li class="timeline-text">Reading</li>
+            <li class="skills-text">Origami</li>&emsp;
+            <li class="skills-text">Papercrafts</li>&emsp;
+            <li class="skills-text">Board Games</li>&emsp;
+            <li class="skills-text">Cycling</li>&emsp;
+            <li class="skills-text">Cooking</li>&emsp;
+            <li class="skills-text">Reading</li>
           </ol>
         </section>
 
-        <!-- SKILLS -->
-        <section class="skill">
-          <h3 class="h3 skills-title">My skills</h3>
+          <!-- SKILLS WITH PROGRESS BAR -->
+          <!--
+          <h3 class="h3 skills-title">Technical skills</h3> 
           <ul class="skills-list content-card">
-
-            <!-- Web Design -->
+ 
             <li class="skills-item">
               <div class="title-wrapper">
                 <h5 class="h5">Matlab</h5>
@@ -656,7 +712,6 @@
               </div>
             </li>
 
-            <!-- Graphic Design -->
             <li class="skills-item">
               <div class="title-wrapper">
                 <h5 class="h5">C</h5>
@@ -667,7 +722,6 @@
               </div>
             </li>
 
-            <!-- Branding -->
             <li class="skills-item">
               <div class="title-wrapper">
                 <h5 class="h5">Python</h5>
@@ -678,7 +732,6 @@
               </div>
             </li>
 
-            <!-- WordPress -->
             <li class="skills-item">
               <div class="title-wrapper">
                 <h5 class="h5">Pytorch/TensorFlow</h5>
@@ -690,6 +743,7 @@
             </li>
           </ul>
         </section>
+      -->
 
       </article>
 
