updated about me page

--- a/index.html
+++ b/index.html
@@ -217,11 +217,11 @@
 
         <section class="about-text">
           <p>
-            I'm a Graduate Computer Science student at the University of Crete. My current research interests fall in the areas of signal processing, machine learning, deep learning and artificial intelligence.
+            I'm an M.Sc. student at the Computer Science Department of the University of Crete. My current research interests fall in the areas of signal processing, machine learning and neural networks.
           </p>
 
           <p>
-            My aim is to develop and implement efficient algorithms in the general fields of artificial intelligence and signal processing, based on solid theoretical and mathematical foundations. I am currently focused mainly on speech, audio and image processing tasks.
+            I have always been fascinated by the potential of artificial intelligence to revolutionize how we approach complex problems and make meaningful impacts in the world. My aim is to develop and implement efficient algorithms in the general fields of artificial intelligence and signal processing, based on solid theoretical and mathematical foundations. Currently I am mainly focused on speech, audio and image processing tasks.
           </p>
         </section>
 
@@ -864,7 +864,7 @@
                   </div>
                   <img src="./assets/images/sorry.png" alt="sorry board game" loading="lazy">
                 </figure>
-                <h3 class="project-title">Implementation of "Sorry!" board game in Java, using the MMVC model</h3>
+                <h3 class="project-title">Implementation of "Sorry!" board game in Java, using the MVC model</h3>
                 <p class="project-category">Software Development</p>
               </a>
             </li>
