add yago project

--- a/index.html
+++ b/index.html
@@ -776,6 +776,9 @@
             <li class="filter-item">
               <button data-filter-btn>Software Development</button>
             </li>
+            <li class="filter-item">
+              <button data-filter-btn>Knowledge Representation</button>
+            </li>
             <!--
             <li class="filter-item">
               <button data-filter-btn>Web design</button>
@@ -811,6 +814,9 @@
               <li class="select-item">
                 <button data-select-item>Software Development</button>
               </li>
+              <li class="select-item">
+                <button data-select-item>Knowledge Representation</button>
+              </li>
               <!--
               <li class="select-item">
                 <button data-select-item>Web design</button>
@@ -827,6 +833,20 @@
 
           <ul class="project-list">
 
+            <!-- YAGO -->
+            <li class="project-item  active" data-filter-item data-category="compilers">
+              <a href="#">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="./assets/images/yago.png" alt="compiler" loading="lazy">
+                </figure>
+                <h3 class="project-title">"Yet Another Galaxy Ontology" a DL ontology about the milky way galaxy</h3>
+                <p class="project-category">Knowledge Representation</p>
+              </a>
+            </li>
+
             <!-- SPANAKAZ -->
             <li class="project-item  active" data-filter-item data-category="compilers">
               <a href="#">
@@ -836,7 +856,7 @@
                   </div>
                   <img src="./assets/images/compiler.png" alt="compiler" loading="lazy">
                 </figure>
-                <h3 class="project-title">co-creation of "SpanaKaz"</h3>
+                <h3 class="project-title">"SpanaKaz" compiler</h3>
                 <p class="project-category">Compilers</p>
               </a>
             </li>
