change Yannis to Ioannis

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Yannis Kaziales</title>
+  <title>Ioannis Kaziales</title>
 
   <!--
     - favicon
@@ -42,11 +42,11 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/avatar.png" alt="Yannis Kaziales" width="80">
+          <img src="./assets/images/avatar.png" alt="Ioannis Kaziales" width="80">
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Yannis Kaziales">Yannis Kaziales</h1>
+          <h1 class="name" title="Ioannis Kaziales">Ioannis Kaziales</h1>
 
           <p class="title">Computer Scientist</p>
         </div>
@@ -842,7 +842,7 @@
                   </div>
                   <img src="./assets/images/yago.png" alt="compiler" loading="lazy">
                 </figure>
-                <h3 class="project-title">"Yet Another Galaxy Ontology" a DL ontology about the milky way galaxy</h3>
+                <h3 class="project-title">"Yet Another Galaxy Ontology" a DL knowledge base about the milky way galaxy</h3>
                 <p class="project-category">Knowledge Representation</p>
               </a>
             </li>
