add CoughSultant in portfolio, change portfolio images to 600x450

--- a/index.html
+++ b/index.html
@@ -811,18 +811,21 @@
               <button class="active" data-filter-btn>All</button>
             </li>
             <li class="filter-item">
+              <button data-filter-btn>Machine Learning</button>
+            </li>
+            <li class="filter-item">
+              <button data-filter-btn>Knowledge Representation</button>
+            </li>
+            <li class="filter-item">
+              <button data-filter-btn>Software Development</button>
+            </li>
+            <!--
+            <li class="filter-item">
               <button data-filter-btn>Compilers</button>
             </li>
             <li class="filter-item">
               <button data-filter-btn>Networking</button>
             </li>
-            <li class="filter-item">
-              <button data-filter-btn>Software Development</button>
-            </li>
-            <li class="filter-item">
-              <button data-filter-btn>Knowledge Representation</button>
-            </li>
-            <!--
             <li class="filter-item">
               <button data-filter-btn>Web design</button>
             </li>
@@ -849,18 +852,21 @@
                 <button data-select-item>All</button>
               </li>
               <li class="select-item">
+                <button data-select-item>Machine Learning</button>
+              </li>
+              <li class="select-item">
+                <button data-select-item>Knowledge Representation</button>
+              </li>
+              <li class="select-item">
+                <button data-select-item>Software Development</button>
+              </li>
+              <!--
+              <li class="select-item">
                 <button data-select-item>Compilers</button>
               </li>
               <li class="select-item">
                 <button data-select-item>Networking</button>
               </li>
-              <li class="select-item">
-                <button data-select-item>Software Development</button>
-              </li>
-              <li class="select-item">
-                <button data-select-item>Knowledge Representation</button>
-              </li>
-              <!--
               <li class="select-item">
                 <button data-select-item>Web design</button>
               </li>
@@ -876,8 +882,22 @@
 
           <ul class="project-list">
 
+            <!-- COUGHSULTANT -->
+            <li class="project-item  active" data-filter-item data-category="machine learning">
+              <a href="#">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="./assets/images/coughsultant.png" alt="compiler" loading="lazy">
+                </figure>
+                <h3 class="project-title">"CoughSultant" Covid-19 detection from cough sounds</h3>
+                <p class="project-category">Machine Learning</p>
+              </a>
+            </li>
+            
             <!-- YAGO -->
-            <li class="project-item  active" data-filter-item data-category="compilers">
+            <li class="project-item  active" data-filter-item data-category="knowledge representation">
               <a href="#">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -891,7 +911,7 @@
             </li>
 
             <!-- SPANAKAZ -->
-            <li class="project-item  active" data-filter-item data-category="compilers">
+            <li class="project-item  active" data-filter-item data-category="software development">
               <a href="#">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -900,21 +920,21 @@
                   <img src="./assets/images/compiler.png" alt="compiler" loading="lazy">
                 </figure>
                 <h3 class="project-title">"SpanaKaz" compiler</h3>
-                <p class="project-category">Compilers</p>
+                <p class="project-category">Software Development</p>
               </a>
             </li>
 
             <!-- MICROTCP -->
-            <li class="project-item  active" data-filter-item data-category="networking">
+            <li class="project-item  active" data-filter-item data-category="software development">
               <a href="#">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="./assets/images/microTCP.jpg" alt="micro TCP" loading="lazy">
+                  <img src="./assets/images/microTCP.png" alt="micro TCP" loading="lazy">
                 </figure>
                 <h3 class="project-title">MicroTCP: a lightweight protocol for reliable data transfer over UDP</h3>
-                <p class="project-category">Networking</p>
+                <p class="project-category">Software Development</p>
               </a>
             </li>
 
