add csd schedule

--- a/index.html
+++ b/index.html
@@ -882,6 +882,20 @@
 
           <ul class="project-list">
 
+            <!-- CSD SCHEDULE -->
+            <li class="project-item  active" data-filter-item data-category="software development">
+              <a target="_blank" href="https://johnnykaz.github.io/schedule_csd/">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="./assets/images/schedule.png" alt="schedule" loading="lazy">
+                </figure>
+                <h3 class="project-title">Maintaining a website with the current schedule of CSD, UoC</h3>
+                <p class="project-category">Software Development</p>
+              </a>
+            </li>
+            
             <!-- COUGHSULTANT -->
             <li class="project-item  active" data-filter-item data-category="machine learning">
               <a href="#">
@@ -889,7 +903,7 @@
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="./assets/images/coughsultant.png" alt="compiler" loading="lazy">
+                  <img src="./assets/images/coughsultant.png" alt="coughsultant" loading="lazy">
                 </figure>
                 <h3 class="project-title">"CoughSultant" Covid-19 detection from cough sounds</h3>
                 <p class="project-category">Machine Learning</p>
