--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
                   </div>
                   <img src="./assets/images/schedule.png" alt="schedule" loading="lazy">
                 </figure>
-                <h3 class="project-title">Maintaining a website with the current schedule of CSD, UoC</h3>
+                <h3 class="project-title">Contribution to a website with the schedule of CSD, UoC</h3>
                 <p class="project-category">Software Development</p>
               </a>
             </li>
