add url for coughsultant project

--- a/index.html
+++ b/index.html
@@ -898,7 +898,7 @@
             
             <!-- COUGHSULTANT -->
             <li class="project-item  active" data-filter-item data-category="machine learning">
-              <a href="#">
+              <a target="_blank" href="https://github.com/JohnnyKaz/CoughSultant">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
