--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
           </p>
 
           <p>
-            I have always been fascinated by the potential of artificial intelligence to revolutionize how we approach complex problems and make meaningful impacts in the world. My aim is to develop and implement efficient algorithms in the general fields of artificial intelligence and signal processing, based on solid theoretical and mathematical foundations. Currently I am mainly focused on speech, audio and image processing tasks.
+            I have always been fascinated by the potential of artificial intelligence to revolutionize how we approach complex problems and make meaningful impact in the world. My aim is to develop and implement efficient algorithms in the general fields of artificial intelligence and signal processing, based on solid theoretical and mathematical foundations. Currently I am mainly focused on speech, audio and image processing tasks.
           </p>
         </section>
 
