explain spanakaz project better

--- a/index.html
+++ b/index.html
@@ -933,7 +933,7 @@
                   </div>
                   <img src="./assets/images/compiler.png" alt="compiler" loading="lazy">
                 </figure>
-                <h3 class="project-title">"SpanaKaz" compiler</h3>
+                <h3 class="project-title">compiler and virtual machine for "SpanaKaz" language</h3>
                 <p class="project-category">Software Development</p>
               </a>
             </li>
