change avatar, larger icons

--- a/index.html
+++ b/index.html
@@ -137,19 +137,19 @@
 
           <li class="social-item">
             <a href="https://www.linkedin.com/in/johnny-kaz/" class="social-link" target="_blank">
-              <ion-icon name="logo-linkedin"></ion-icon>
+              <ion-icon name="logo-linkedin" size="large"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
             <a href="https://github.com/JohnnyKaz" class="social-link" target="_blank">
-              <ion-icon name="logo-github"></ion-icon>
+              <ion-icon name="logo-github" size="large"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
             <a href="https://www.instagram.com/kazjohnny/" class="social-link" target="_blank">
-              <ion-icon name="logo-instagram"></ion-icon>
+              <ion-icon name="logo-instagram" size="large"></ion-icon>
             </a>
           </li>
 
@@ -238,7 +238,7 @@
             <!-- SOFTWARE DEVELOPMENT -->
             <li class="service-item">
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Software development icon" width="40">
+                <img src="./assets/images/icon-dev.svg" alt="Software development icon" width="70">
               </div>
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Software development</h4>
@@ -251,8 +251,7 @@
             <!-- RESEARCH -->
             <li class="service-item">
               <div class="service-icon-box">
-                <img src="./assets/images/icon-research.svg
-                " alt="design icon" width="40">
+                <img src="./assets/images/icon-research.svg" alt="design icon" width="70">
               </div>
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Academic Research</h4>
@@ -266,7 +265,7 @@
             <!-- ARTIFICIAL INTELLIGENCE -->
             <li class="service-item">
               <div class="service-icon-box">
-                <img src="./assets/images/icon-ai.svg" alt="Artificial Intelligence icon" width="40">
+                <img src="./assets/images/icon-ai.svg" alt="Artificial Intelligence icon" width="70">
               </div>
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Artificial Intelligence</h4>
@@ -279,7 +278,7 @@
             <!-- PAPERCRAFTS -->
             <li class="service-item">
               <div class="service-icon-box">
-                <img src="./assets/images/icon-origami.svg" alt="origami icon" width="40">
+                <img src="./assets/images/icon-origami.svg" alt="origami icon" width="70">
               </div>
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Papercrafts</h4>
@@ -520,7 +519,7 @@
         <section class="timeline">
           <div class="title-wrapper">
             <div class="icon-box">
-              <ion-icon name="briefcase-outline"></ion-icon>
+              <ion-icon name="briefcase-outline" size="large"></ion-icon>
             </div>
             <h3 class="h3">Work/Experience</h3>
           </div>
@@ -540,7 +539,7 @@
         <section class="timeline">
           <div class="title-wrapper">
             <div class="icon-box">
-              <ion-icon name="school-outline"></ion-icon>
+              <ion-icon name="school-outline" size="large"></ion-icon>
             </div>
             <h3 class="h3">Education</h3>
           </div>
@@ -583,7 +582,7 @@
         <section class="timeline">
           <div class="title-wrapper">
             <div class="icon-box">
-              <ion-icon name="ribbon-outline"></ion-icon>
+              <ion-icon name="ribbon-outline" size="large"></ion-icon>
             </div>
             <h3 class="h3">Honors & Awards</h3>
           </div>
@@ -610,7 +609,7 @@
         <section class="skill">
           <div class="title-wrapper">
             <div class="icon-box">
-              <ion-icon name="build-outline"></ion-icon>
+              <ion-icon name="build-outline" size="large"></ion-icon>
             </div>
             <h3 class="h3">Technical skills</h3>
           </div>
@@ -669,7 +668,7 @@
         <section class="timeline">
           <div class="title-wrapper">
             <div class="icon-box">
-              <ion-icon name="calendar-outline"></ion-icon>
+              <ion-icon name="calendar-outline" size="large"></ion-icon>
             </div>
             <h3 class="h3">Activities</h3>
           </div>
@@ -711,7 +710,7 @@
         <section class="timeline">
           <div class="title-wrapper">
             <div class="icon-box">
-              <ion-icon name="language-outline"></ion-icon>
+              <ion-icon name="language-outline" size="large"></ion-icon>
             </div>
             <h3 class="h3">Languages</h3>
           </div>
@@ -726,7 +725,7 @@
         <section class="timeline">
           <div class="title-wrapper">
             <div class="icon-box">
-              <ion-icon name="basketball-outline"></ion-icon>
+              <ion-icon name="basketball-outline" size="large"></ion-icon>
             </div>
             <h3 class="h3">Hobbies</h3>
           </div>
