add activities (icassp, csd career fair)

--- a/index.html
+++ b/index.html
@@ -673,6 +673,17 @@
             <h3 class="h3">Activities</h3>
           </div>
           <ol class="timeline-list">
+
+            <!-- CSD CAREER FAIR -->
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Organizing Committee Member at the "<a href="https://careerfaircsd2023.com/" target="_blank">CSD Career Fair</a>" 2023</h4>
+            </li>
+
+            <!-- ICASSP 2023 -->
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Volunteer at the International Conference "<a href="https://2023.ieeeicassp.org/" target="_blank">IEEE ICASSP</a>" 2023</h4>
+            </li>
+
             <!-- IDENTITIES SUMMER SCHOOL 2022 -->
             <li class="timeline-item">
               <h4 class="h4 timeline-item-title">Participation in the International Summer School "<a href="https://identitiesproject.eu/" target="_blank">IDENTITIES</a>" 2022</h4>
