add project PSO Ellipse tracking

--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
               <button data-filter-btn>Machine Learning</button>
             </li>
             <li class="filter-item">
-              <button data-filter-btn>Knowledge Representation</button>
+              <button data-filter-btn>Computer Vision</button>
             </li>
             <li class="filter-item">
               <button data-filter-btn>Software Development</button>
@@ -865,7 +865,7 @@
                 <button data-select-item>Machine Learning</button>
               </li>
               <li class="select-item">
-                <button data-select-item>Knowledge Representation</button>
+                <button data-select-item>Computer Vision</button>
               </li>
               <li class="select-item">
                 <button data-select-item>Software Development</button>
@@ -891,6 +891,20 @@
           </div>
 
           <ul class="project-list">
+
+            <!-- PARTICLE SWARM -->
+            <li class="project-item  active" data-filter-item data-category="computer vision">
+              <a target="_blank" href="https://github.com/JohnnyKaz/ComputerVision/tree/main/Circle-Ellipse-Tracking-PSO">
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+                  <img src="./assets/images/particleSwarm.gif" alt="schedule" loading="lazy">
+                </figure>
+                <h3 class="project-title">Circle/Ellipse Tracking using Particle Swarm Optimization</h3>
+                <p class="project-category">Computer Vision</p>
+              </a>
+            </li>
 
             <!-- CSD SCHEDULE -->
             <li class="project-item  active" data-filter-item data-category="software development">
@@ -921,7 +935,7 @@
             </li>
             
             <!-- YAGO -->
-            <li class="project-item  active" data-filter-item data-category="knowledge representation">
+            <li class="project-item  active" data-filter-item data-category="software development">
               <a href="#">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -930,7 +944,7 @@
                   <img src="./assets/images/yago.png" alt="compiler" loading="lazy">
                 </figure>
                 <h3 class="project-title">"Yet Another Galaxy Ontology" a DL knowledge base about the milky way galaxy</h3>
-                <p class="project-category">Knowledge Representation</p>
+                <p class="project-category">Software Development</p>
               </a>
             </li>
 
