added BSc Thesis file: MeanShifter

--- a/index.html
+++ b/index.html
@@ -1097,7 +1097,7 @@
 
             <!-- MeanShifter -->
             <li class="blog-post-item">
-              <a href="#">
+              <a target="_blank" href="./resources/MeanShifter.pdf">
                 <figure class="blog-banner-box">
                   <img src="./assets/images/meanshifter.png" alt="MeanShifter" loading="lazy">
                 </figure>
