add some CS-587 projects (speech processing) to portfolio

--- a/index.html
+++ b/index.html
@@ -829,10 +829,10 @@
             <li class="filter-item">
               <button data-filter-btn>Software Development</button>
             </li>
-            <!--
             <li class="filter-item">
-              <button data-filter-btn>Compilers</button>
+              <button data-filter-btn>Signal Processing</button>
             </li>
+            <!--
             <li class="filter-item">
               <button data-filter-btn>Networking</button>
             </li>
@@ -870,10 +870,10 @@
               <li class="select-item">
                 <button data-select-item>Software Development</button>
               </li>
-              <!--
               <li class="select-item">
-                <button data-select-item>Compilers</button>
+                <button data-select-item>Signal Processing</button>
               </li>
+              <!--
               <li class="select-item">
                 <button data-select-item>Networking</button>
               </li>
@@ -938,10 +938,43 @@
             <li class="project-item  active" data-filter-item data-category="software development">
               <a href="#">
                 <figure class="project-img">
-                  <img src="./assets/images/yago.png" alt="compiler" loading="lazy">
+                  <img src="./assets/images/yago.png" alt="YAGO" loading="lazy">
                 </figure>
                 <h3 class="project-title">"Yet Another Galaxy Ontology" a DL knowledge base about the milky way galaxy</h3>
                 <p class="project-category">Software Development</p>
+              </a>
+            </li>
+
+            <!-- SPEAKER IDENTIFICATION -->
+            <li class="project-item  active" data-filter-item data-category="signal processing">
+              <a href="#">
+                <figure class="project-img">
+                  <img src="./assets/images/speakerIdentification.png" alt="Speaker Identification" loading="lazy">
+                </figure>
+                <h3 class="project-title">automatic speaker identification system (MFCCs features & GMM  classifier)</h3>
+                <p class="project-category">Signal Processing</p>
+              </a>
+            </li>
+
+            <!-- SPEECH ENHANCEMENT -->
+            <li class="project-item  active" data-filter-item data-category="signal processing">
+              <a href="#">
+                <figure class="project-img">
+                  <img src="./assets/images/speechEnhancement.png" alt="Speech Enhancement" loading="lazy">
+                </figure>
+                <h3 class="project-title">speech enhancement tool using Spectral Subtraction & Wiener Filtering</h3>
+                <p class="project-category">Signal Processing</p>
+              </a>
+            </li>
+
+            <!-- VOICED/UNVOICED/SILENCE DISCRIMINATOR -->
+            <li class="project-item  active" data-filter-item data-category="signal processing">
+              <a href="#">
+                <figure class="project-img">
+                  <img src="./assets/images/VUS.png" alt="VUS discriminator" loading="lazy">
+                </figure>
+                <h3 class="project-title">simple, adaptive, fully-automated VUS discriminator</h3>
+                <p class="project-category">Signal Processing</p>
               </a>
             </li>
 
