modifications to resume + download cv

--- a/index.html
+++ b/index.html
@@ -515,6 +515,16 @@
           <h2 class="h2 article-title">Resume</h2>
         </header>
 
+        <!-- DOWNLOAD CV -->
+        <section class="timeline">
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="download-outline" size="large"></ion-icon>
+            </div>
+            <h3 class="h3"><a href="./assets/pdf/cv.pdf" target="_blank" rel="noopener noreferrer">Download Resume (pdf)</a></h3>
+          </div>
+        </section>
+
         <!-- WORK & EXPERIENCE -->
         <section class="timeline">
           <div class="title-wrapper">
@@ -552,6 +562,7 @@
               <p class="timeline-text">
                 University of Crete, Computer Science Department<br>
                 <span>Expected Graduation:</span> June 2024<br>
+                <span>current GPA:</span> 9.7/10<br>
               </p>
             </li>
 
@@ -562,7 +573,8 @@
               <p class="timeline-text">
                 University of Crete, Computer Science Department<br>
                 <span>GPA:</span> 9.18/10<br>
-                <span>Thesis:</span> Image Segmentation algorithms based on "transformer" neural networks
+                <span>Thesis:</span> Image Segmentation algorithms based on "transformer" neural networks<br>
+                <span>Advisor:</span> Nikos Komodakis (Assistant Professor)
               </p>
             </li>
 
@@ -640,6 +652,7 @@
                 Intermediate:
               </span>
             </li><br>&emsp;
+            <li class="skills-text">Pytorch</li>&emsp;
             <li class="skills-text">Git/Github</li>&emsp;
             <li class="skills-text">C++</li>&emsp;
             <li class="skills-text">Java</li>&emsp;
@@ -655,7 +668,6 @@
                 Basic:
               </span>
             </li><br>&emsp;
-            <li class="skills-text">Pytorch</li>&emsp;
             <li class="skills-text">TensorFlow</li>&emsp;
             <li class="skills-text">CSS</li>&emsp;
             <li class="skills-text">Prolog</li>&emsp;
@@ -673,6 +685,11 @@
             <h3 class="h3">Activities</h3>
           </div>
           <ol class="timeline-list">
+
+            <!-- CSD TEACHING ASSISTANT -->
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Teaching Assistant for <a href="http://hy217-csd.datacenter.uoc.gr/" target="_blank">Probability</a>, <a href="https://www.csd.uoc.gr/~hy119/" target="_blank">Linear Algebra</a> and <a href="https://www.csd.uoc.gr/~hy225/" target="_blank">Computer Organization</a> courses</h4>
+            </li>
 
             <!-- CSD CAREER FAIR -->
             <li class="timeline-item">
@@ -1118,7 +1135,7 @@
 
             <!-- MeanShifter -->
             <li class="blog-post-item">
-              <a target="_blank" href="./resources/MeanShifter.pdf">
+              <a target="_blank" href="./assets/pdf/MeanShifter.pdf">
                 <figure class="blog-banner-box">
                   <img src="./assets/images/meanshifter.png" alt="MeanShifter" loading="lazy">
                 </figure>
