added sudoku solver in portfolio

--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
             <div class="icon-box">
               <ion-icon name="download-outline" size="large"></ion-icon>
             </div>
-            <h3 class="h3"><a href="./assets/pdf/cv.pdf" target="_blank" rel="noopener noreferrer">Download Resume (pdf)</a></h3>
+            <h3 class="h3"><a href="./assets/pdf/cv.pdf" target="_blank" rel="noopener noreferrer" style="color: hsl(45, 100%, 72%)">Download Resume (pdf)</a></h3>
           </div>
         </section>
 
@@ -1013,6 +1013,17 @@
                   <img src="./assets/images/microTCP.png" alt="micro TCP" loading="lazy">
                 </figure>
                 <h3 class="project-title">MicroTCP: a lightweight protocol for reliable data transfer over UDP</h3>
+                <p class="project-category">Software Development</p>
+              </a>
+            </li>
+
+            <!-- SUDOKU SOLVER -->
+            <li class="project-item  active" data-filter-item data-category="software development">
+              <a href="#">
+                <figure class="project-img">
+                  <img src="./assets/images/sudoku.png" alt="sudoku solver" loading="lazy">
+                </figure>
+                <h3 class="project-title">Implementation of Sudoku Solver</h3>
                 <p class="project-category">Software Development</p>
               </a>
             </li>
